# Strategist

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENGINEERING.md  HORIZON_A_TO_C_IMPLEMENTATION_LEDGER.md  NEXT_ADVANCED_TECHNICAL_STRATEGY_TEMPLATES_LEDGER.md  NEXT_CANDLESTICK_VOLUME_STRATEGY_TEMPLATES_LEDGER.md  NEXT_CHART_PATTERN_STRATEGY_TEMPLATES_LEDGER.md  NEXT_MARKET_STRUCTURE_STRATEGY_TEMPLATES_LEDGER.md  NEXT_MEAN_REVERSION_STRATEGY_TEMPLATES_LEDGER.md  NEXT_ORACLE_STRATEGY_THESIS_GENERATION_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_CLOSURE_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_EXPORT_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_ACKNOWLEDGMENT_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_ATTESTATION_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_AUDIT_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_CERTIFICATION_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_CLOSEOUT_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_COMPLETION_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_CONTINUITY_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_INVENTORY_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_NOTICE_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_RECONCILIATION_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_REDEPOSIT_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_REGISTER_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_RETRIEVAL_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_RETURN_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_CUSTODY_SEAL_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_HANDOFF_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_SIGNOFF_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_SIGNOFF_VERIFICATION_LEDGER.md  NEXT_PAPER_EXECUTION_EVIDENCE_BUNDLE_RETENTION_VERIFICATION_LEDGER.md  NEXT_PRICE_VOLUME_STRATEGY_TEMPLATES_LEDGER.md  NEXT_SEMANTIC_VALIDATOR_HANDOFF_ARCHIVE_LEDGER.md  NEXT_SEMANTIC_VALIDATOR_HANDOFF_AUDIT_PACKET_LEDGER.md  NEXT_SEMANTIC_VALIDATOR_HANDOFF_CLEARANCE_ACTION_REGISTER_LEDGER.md  NEXT_SEMANTIC_VALIDATOR_HANDOFF_CLEARANCE_OPERATIONS_BOARD_LEDGER.md  NEXT_SEMANTIC_VALIDATOR_HANDOFF_CLEARANCE_RELEASE_CLOSURE_BOARD_LEDGER.md  (+102 more)
.github/workflows/: ci.yml  control-plane-event-diagnostics.yml  production-smoke-diagnostics.yml
configs/provider_ingestion/: example_provider_snapshot.json
configs/strategy_batches/: example_advanced_technical_batch.json  example_batch.json  example_candlestick_volume_batch.json  example_chart_pattern_batch.json  example_gauntlet_batch.json  example_local_bars_batch.json  example_market_structure_batch.json  example_mean_reversion_batch.json  example_price_volume_batch.json  example_provider_snapshot_batch.json
dist_wheel_test/: strategy_validator-0.1.0rc1-py3-none-any.whl
docs/: ARCHITECTURE_HEALTH.md  ARCHITECTURE_ROADMAP.md  AUDIT_TIMELINE_FORENSIC_COCKPIT.md  DEPLOYMENT_RUNBOOK.md  EVIDENCE_PACKET_RUNBOOK_VIEWER.md  LOCAL_OPS_COMMAND_CENTER.md  OPERATOR_RUNBOOK.md  PILOT_BURNIN_REPORT.md  PILOT_READINESS.md  PRODUCTION_PHASE_EXECUTION.md  PRODUCTION_SLICE_V1.md  STORAGE_UPGRADE_PATH.md
docs/api/: ui-public-facade.snapshot.json
docs/architecture/: ADR-0001-canonical-evidence-backbone.md  ADR-0002-control-plane-and-cli-seams.md  ADR-0003-control-plane-workflow-primitives.md  ADR-0004-governance-assessment-and-policy-extraction.md  ADR-0005-projection-artifact-registry-seam.md  ADR-0006-event-view-projection-registry.md  ADR-0007-projection-artifact-index-and-checkpoint-registry.md  ADR-0008-projection-discovery-and-operator-consumption.md  ADR-0009-projection-query-and-operator-consumption.md  ADR-0010-projection-service-read-plane.md  ADR-0011-operator-pack-materialization-service.md  ADR-0012-operator-pack-assembly-service.md  ADR-0013-governance-work-queue-service.md  ADR-0014-operator-queue-snapshot-surface.md  ADR-0015-operator-queue-query-surface.md  ADR-0016-operator-workboard-read-plane.md  ADR-0017-operator-board-triage-section-service.md  ADR-0018-operator-section-registry-and-pack-composition.md  ADR-0019-operator-pack-header-summary-service.md  ADR-0020-shared-html-pack-rendering-service.md  ADR-0021-operator-pack-manifest-and-index-service.md  ADR-0022-operator-pack-discovery-query-service.md  ADR-0023-operator-pack-workbench-read-plane.md  ADR-0024-operator-pack-selector-navigation-service.md  ADR-0025-operator-pack-dashboard-overview-read-plane.md  ADR-0026-operator-pack-timeline-activity-feed.md  (+75 more)
docs/artifacts/: MANIFEST.json  (+12 more)
scratch/: debug_adjudication.py
scripts/: __init__.py  _path_integrity.py  architecture_health_report.py  benchmark_research_compute.py  branch_cleanup_audit.py  build_provider_evidence_manifest.py  certification_stability.py  check_provider_keys.py  ci_local_verify.py  claim_single_tenant_frontend_readiness.py  clean_frontend_workspace.py  environment_check.py  frontend_certify_runner.py  frontend_ui_contract_check.py  generate_frontend_ui_facade_contract.py  generate_operator_deployment_signoff.py  install_research_cycle_scheduled_task.ps1  local_certify.py  main_release_verification_pack.py  merge_secrets_into_deployment_env.py  migration_truth_check.py  normalize_provider_samples.py  openapi_contract_snapshot.py  package_repo.py  pilot_followup_burnin_driver.py  pilot_http_burnin_driver.py  pilot_staging_alpaca_burnin_driver.py  production_smoke_check.py  provider_health_check.py  provider_sample_public.py  public_surface_dashboard.py  purge_repo_transients.py  repository_truth_check.py  research_cycle_daemon.py  retrieve_provider_samples.py  run_full_operator_spine.ps1  run_full_operator_spine.py  run_local_api_with_deployment_env.py  run_local_certify_research_paper_discovery.ps1  run_local_docker_api.ps1  (+34 more)
strategy_validator/: __init__.py  promotion_gates.yaml
tests/: conftest.py
(+2821 files in other folders)
